@@ -147,6 +147,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|LinkedList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -1126,6 +1136,24 @@ name|REGIONSERVER
 init|=
 literal|"regionserver"
 decl_stmt|;
+comment|/**    * Space is reserved in HRS constructor and then released when aborting    * to recover from an OOME. See HBASE-706.    */
+specifier|private
+specifier|final
+name|LinkedList
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|reservedSpace
+init|=
+operator|new
+name|LinkedList
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+argument_list|()
+decl_stmt|;
 comment|/**    * Thread to shutdown the region server in an orderly manner.  This thread    * is registered as a shutdown hook in the HRegionServer constructor and is    * only called when the HRegionServer receives a kill signal.    */
 class|class
 name|ShutdownThread
@@ -1511,6 +1539,45 @@ operator|.
 name|threadWakeFrequency
 argument_list|)
 expr_stmt|;
+name|int
+name|nbBlocks
+init|=
+name|conf
+operator|.
+name|getInt
+argument_list|(
+literal|"hbase.regionserver.nbreservationblocks"
+argument_list|,
+literal|4
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|nbBlocks
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|reservedSpace
+operator|.
+name|add
+argument_list|(
+operator|new
+name|byte
+index|[
+name|DEFAULT_SIZE_RESERVATION_BLOCK
+index|]
+argument_list|)
+expr_stmt|;
+block|}
 comment|// Register shutdown hook for HRegionServer, runs an orderly shutdown
 comment|// when a kill signal is recieved
 name|Runtime
@@ -2187,6 +2254,25 @@ argument_list|)
 expr_stmt|;
 block|}
 comment|// for
+block|}
+catch|catch
+parameter_list|(
+name|OutOfMemoryError
+name|error
+parameter_list|)
+block|{
+name|abort
+argument_list|()
+expr_stmt|;
+name|LOG
+operator|.
+name|fatal
+argument_list|(
+literal|"Ran out of memory"
+argument_list|,
+name|error
+argument_list|)
+expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
@@ -3341,6 +3427,11 @@ name|void
 name|abort
 parameter_list|()
 block|{
+name|reservedSpace
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
 name|this
 operator|.
 name|abortRequested
@@ -5712,6 +5803,25 @@ operator|.
 name|batchUpdate
 argument_list|(
 name|b
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|OutOfMemoryError
+name|error
+parameter_list|)
+block|{
+name|abort
+argument_list|()
+expr_stmt|;
+name|LOG
+operator|.
+name|fatal
+argument_list|(
+literal|"Ran out of memory"
+argument_list|,
+name|error
 argument_list|)
 expr_stmt|;
 block|}
